# rns-ble-connector-playground

./: .gitignore  CLAUDE.md  LICENSE  README.md  file_transfer.py  git-remote-jcomprns  lxmf_messenger.py  pyproject.toml  requirements.txt  rnode_pair.py  rns_git.py  shared.py
.claude/skills/add-config-profile/: SKILL.md
.claude/skills/debug-rns-connectivity/: SKILL.md
.claude/skills/pair-rnode/: SKILL.md
.claude/skills/run-messenger/: SKILL.md
.github/: FUNDING.yml
configs/default/: config
src/jcomprns/: __init__.py  file_transfer.py  lxmf_messenger.py  rnode_pair.py  rns_git.py  shared.py
